--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,6 @@ spring.application.name=Springbootlearning
 server.port=2020
 
 # Database configuration
-spring.datasource.url=jdbc:h2:mem:tododb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=1234
-spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.data.mongodb.uri=mongodb://localhost:27017/springbootlearning
 
+spring.data.mongodb.database=Rajadurai
